--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-# Core ML & Data Science
+streamlit==1.33.0
 pandas==2.2.2
+scikit-learn==1.3.2
 numpy==1.26.4
-scikit-learn==1.4.2
-
-# UI Framework
-streamlit==1.35.0
-
-# Optional: for visualizations (used during EDA)
+joblib==1.3.2
 matplotlib==3.8.4
 seaborn==0.13.2
-
-# Optional: if you trained model with XGBoost
-xgboost==2.0.3
-
